# kagatilang

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md  run.sh  rustfmt.toml  torture.py
Bich/: Makefile  build.sh  io.c  kag_raylib.c  sock.c
Lib/: README.md
Lib/internal/: gc.kag
Lib/socket/: lib.bic  lib.kag
Lib/std/: io.kag
compiler/: README.md
compiler/kagc_ast/: Cargo.toml
compiler/kagc_ast/src/: ast_kind.rs  ast_node.rs  expr.rs  import.rs  lib.rs  node_kind.rs  operation.rs  pattern.rs  record.rs  source_file.rs  stmt.rs  value.rs
compiler/kagc_ast_lowering/: Cargo.toml
compiler/kagc_ast_lowering/src/: ast_lowerer.rs  ast_to_mir.rs  fn_ctx.rs  lib.rs
compiler/kagc_ast_lowering/tests/: lib.rs
compiler/kagc_backend/: Cargo.toml
compiler/kagc_backend/src/: lib.rs  reg.rs
compiler/kagc_backend/src/arch/: aarch64.rs  mod.rs
compiler/kagc_backend/src/codegen/: Cargo.toml  cg.rs  codegen.rs  mod.rs
compiler/kagc_backend/src/codegen/aarch64/: aarch64_cg.rs
compiler/kagc_backend/src/codegen/lsvm/: mod.rs  vm_cg.rs
compiler/kagc_backend/src/codegen/x86/: x86_gen.rs
compiler/kagc_backend/src/codegen_asm/: aarch64.rs  cg_function_ctx.rs  eval_stack.rs  fn_state.rs  mod.rs  stack_frame.rs  state.rs
compiler/kagc_backend/src/codegen_asm/stack/: liveness_analyzer.rs  mod.rs  stack_frame.rs  stack_frame_builder.rs
compiler/kagc_backend/src/codegen_lsvm/: frame.rs  mod.rs  object.rs  opcode.rs
compiler/kagc_backend/src/regalloc/: aarch64.rs  allocation.rs  linear_alloca.rs  linear_alloca2.rs  mod.rs  register.rs  x86.rs
compiler/kagc_codegen/: Cargo.toml
compiler/kagc_codegen/src/: codegen.rs  fn_ctx.rs  lib.rs  typedefs.rs
compiler/kagc_codegen/tests/: temp_reg_map.rs
compiler/kagc_comp_unit/: Cargo.toml
compiler/kagc_comp_unit/src/: comp_unit.rs  file_pool.rs  import_resolver.rs  lib.rs  source_map.rs
compiler/kagc_const/: Cargo.toml
compiler/kagc_const/src/: lib.rs  pool.rs
compiler/kagc_ctx/: Cargo.toml
compiler/kagc_ctx/src/: builder.rs  ctx.rs  interner.rs  lib.rs
compiler/kagc_errors/: Cargo.toml
compiler/kagc_errors/src/: code.rs  diagnostic.rs  lib.rs  terminal.rs
compiler/kagc_gc/: Cargo.toml
compiler/kagc_gc/src/: heap_analyzer.rs  lib.rs
compiler/kagc_ir/: Cargo.toml
compiler/kagc_ir/src/: ir_instr.rs  ir_operands.rs  ir_types.rs  lib.rs
compiler/kagc_ir/tests/: temp_reg_map.rs
compiler/kagc_lexer/: Cargo.toml
compiler/kagc_lexer/src/: tokenizer_impl.rs
compiler/kagc_lir/: Cargo.toml
compiler/kagc_lir/src/: README.md  block.rs  function.rs  instruction.rs  lib.rs  mir_lowerer.rs  operand.rs  vreg.rs
compiler/kagc_lowering/: Cargo.toml
compiler/kagc_lowering/src/: ast_to_mir.rs  errors.rs  fn_ctx.rs  lib.rs  loop_ctx.rs  lowerer.rs  typedefs.rs
compiler/kagc_lowering/src/aarch64/: aarch64_lowerer.rs  mod.rs  stackframe.rs
compiler/kagc_mir/: Cargo.toml
compiler/kagc_mir/src/: analyzer.rs  block.rs  builder.rs  builtin.rs  function.rs  graph_allocator.rs  instruction.rs  interference_graph.rs  ir_instr.rs  ir_operands.rs  lib.rs  mir_builder.rs  module.rs  operand.rs  types.rs  value.rs  variable.rs
compiler/kagc_mir/src/ir_liveness/: liveness_analyzer.rs  mod.rs
compiler/kagc_mir_lowering/: Cargo.toml
compiler/kagc_mir_lowering/src/: lib.rs  mir_to_lir.rs
compiler/kagc_optimization/: Cargo.toml
compiler/kagc_optimization/src/: lib.rs
compiler/kagc_parser/: Cargo.toml
compiler/kagc_parser/src/: builder.rs  lib.rs  options.rs  parser_impl.rs  prelude.rs  session.rs  source_map.rs
compiler/kagc_scope/: Cargo.toml
compiler/kagc_scope/src/: lib.rs  manager.rs  scope.rs  scope_table.rs
compiler/kagc_scope/src/ctx/: builder.rs  mod.rs  scope_ctx.rs
compiler/kagc_sema/: Cargo.toml
compiler/kagc_sema/src/: analyzer.rs  binder.rs  boxing.rs  errors.rs  lib.rs  resolver.rs  ty_checker.rs
compiler/kagc_sema/src/resolver/: _resolver.rs  mod.rs
compiler/kagc_sema/src/type_checker/: checker.rs
compiler/kagc_span/: Cargo.toml
compiler/kagc_span/src/: lib.rs  span.rs
compiler/kagc_symbol/: Cargo.toml
compiler/kagc_symbol/src/: function.rs  lib.rs  registery.rs  sym.rs  symbol_ctx.rs  symbol_table.rs
compiler/kagc_target/src/: reg.rs
compiler/kagc_token/: Cargo.toml
compiler/kagc_token/src/: lib.rs  token.rs  token_kind.rs
compiler/kagc_types/: Cargo.toml
compiler/kagc_types/src/: lib.rs  record.rs  type_.rs
examples/: .gitignore  ex1.kag  http_server.kag  main.kag  readme.md  std.kag
kagc/: Cargo.toml  README.md
kagc/src/: comp_unit.rs  compiler.rs  lib.rs  main.rs
kagc/tests/: test_temps_duration.rs
prototypes/: README.md
prototypes/reg/: reg_alloc.d
runtime/: .gitignore  Cargo.toml  Makefile  build.rs  typedefs.h
runtime/gc/: gc.c  gc.h  gc_str.c  gc_str.h
runtime/graphics/: kag_raylib.c
runtime/http/: http_server.c
runtime/socket/: sock.c
runtime/src/: lib.rs
runtime/tests/: test_gc.c  test_liveness.c
(+60 files in other folders)
