[workspace]
members = [
    "compiler/kagc_ast_lowering",
    "compiler/kagc_backend",
    "compiler/kagc_ast",
    "compiler/kagc_symbol",
    "compiler/kagc_types",
    "compiler/kagc_lexer",
    "compiler/kagc_errors",
    "compiler/kagc_token",
    "compiler/kagc_sema",
    "compiler/kagc_ctx",
    "compiler/kagc_parser",
    "compiler/kagc_utils",
    "compiler/kagc_mir",
    "compiler/kagc_mir_lowering",
    "compiler/kagc_scope",
    "compiler/kagc_comp_unit",
    "compiler/kagc_const",
    "compiler/kagc_span",
    "compiler/kagc_lir",
    "kagc",
    "runtime"
]