[package]
name = "kagc_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
lazy_static = "1.4.0"

kagc_types = { path = "../kagc_types" }
kagc_mir = { path = "../kagc_mir" }
kagc_const = { path = "../kagc_const" }
kagc_ctx = { path = "../kagc_ctx" }
kagc_scope = { path = "../kagc_scope" }
kagc_symbol = { path = "../kagc_symbol" }
kagc_utils = { path = "../kagc_utils" }
runtime = { path = "../../runtime" }