[package]
name = "kagc_ctx"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
lazy_static = "1.4.0"

kagc_ast = { path = "../kagc_ast" }
kagc_symbol = { path = "../kagc_symbol" }
kagc_types = { path = "../kagc_types" }
kagc_scope = { path = "../kagc_scope" }
kagc_comp_unit = { path = "../kagc_comp_unit" }
kagc_const = { path = "../kagc_const" }
kagc_errors = { path = "../kagc_errors" }