[package]
name = "kagc_mir"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
lazy_static = "1.4.0"
indexmap = "2.11.4"

kagc_symbol = { path = "../kagc_symbol" }
kagc_ctx = { path = "../kagc_ctx" }
kagc_ast = { path = "../kagc_ast" }
kagc_types = { path = "../kagc_types" }
kagc_const = { path = "../kagc_const" }
kagc_utils = { path = "../kagc_utils" }