[package]
name = "kagc_scope"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
typed-arena = "2.0.2"

kagc_symbol = { path = "../kagc_symbol" }
kagc_types = { path = "../kagc_types" }
kagc_ast = { path = "../kagc_ast" }
kagc_errors = { path = "../kagc_errors" }
kagc_utils = { path = "../kagc_utils" }